--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
 		<version>1.0.0</version>
 		<relativePath>parent-pom</relativePath>
 	</parent>
-
+	<groupId>org.catapult.rgs.roulette</groupId>
 	<artifactId>roulette-rest-api</artifactId>
-
+	<version>1.0.0</version>
+	<packaging>jar</packaging>
 	<dependencies>
 
 		<!-- Provided -->
@@ -67,6 +68,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.artifactId}-${project.version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
